k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: three-tier-ingress
  namespace: three-tier-app
  labels:
    app: three-tier-app
  annotations:
    # for local dev (HTTP testing)
    traefik.ingress.kubernetes.io/router.middlewares: |
      three-tier-app-security-headers@kubernetescrd,
      three-tier-app-rate-limit@kubernetescrd
spec:
  rules:
    # Magic DNS domain resolving directly to VPS IP
    - host: 192.168.56.114.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend-svc   # Kustomize will transform this to dev-backend-svc
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-svc  # Kustomize will transform this to dev-frontend-svc
                port:
                  number: 3001
